test/type/fail/compare_wrong_first.j
class A{
  Void main() {
    return null > 5;
  }
}
